# amtrak-status

./: .gitignore  CHANGELOG.md  README.md  REFACTORING_PLAN.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
amtrak_status/: __init__.py  api.py  config.py  connection.py  models.py  notifications.py  tracker.py
amtrak_status/display/: __init__.py  compact.py  connection_display.py  errors.py  header.py  predeparture.py  progress.py  stations.py
tests/: conftest.py  test_amtrak_status.py  test_api_fixtures.py  test_integration.py
tests/fixtures/: station_schedule.json  train_active_midjourney.json  train_cancelled_stops.json  train_completed.json  train_delayed_iso.json  train_missing_fields.json  train_multi_day.json  train_predeparture.json  train_space_statusmsg.json  train_with_alerts.json
