[project]
name = "amtrak-status"
version = "0.1.0"
description = "A terminal UI for tracking Amtrak train status with auto-refresh"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "theFestest"}]
license = "Apache-2.0"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx>=0.27,<1",
    "rich>=13,<14",
]

[project.scripts]
amtrak-status = "amtrak_status.tracker:main"

[dependency-groups]
dev = [
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/theFestest/amtrak-status"
Changelog = "https://github.com/theFestest/amtrak-status/releases"
Issues = "https://github.com/theFestest/amtrak-status/issues"
CI = "https://github.com/theFestest/amtrak-status/actions"
